# pytorch-cpp-cuda-starter

./: CMakeLists.txt  README.md  main.cu  simple_matmul.cu  torch_info.py
